tests/ui/plywrite_type_mismatch_vec.stderr
error: ply(type="float") does not match the field type (expected uint for Vec<u32>)
 --> tests/ui/plywrite_type_mismatch_vec.rs:5:5
  |
5 | /     #[ply(type = "float")]
6 | |     foo: Vec<u32>,
  | |_________________^
